# spell

./: Cargo.toml  LICENSE  README.md
examples/: sales_analysis.json  statistics.json  temperature_conversion.json
src/: main.rs
src/core/: engine.rs  error.rs  mod.rs  ops.rs  schema.rs  types.rs
