[package]
name = "spell"
version = "0.1.0"
edition = "2021"
authors = ["Santino Research"]
description = "AI-native programming language"
license = "MIT"
repository = "https://github.com/santino-research/spell"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
